# Beanreadings

./: .gitignore  Cargo.toml  README.md  WRITEUP.md  build.bat  build.sh  index.html  index.js  loc  loc.rs
brn/: Cargo.toml  data.csv
brn/python/: convert.py  infer.py  train.py
brn/python/checkpoints/brn_large_07_05_24/: bnn_1714977052.032727_20089432.pth  bnn_1714978317.725705_825936.pth  bnn_1714979629.315404_468503.pth  bnn_1714981911.010327_430784.pth  bnn_1714984937.4764822_774804.pth  bnn_1714986223.8371022_344943.pth  bnn_1714987547.2801979_228574.pth  bnn_1714988876.094026_145471.pth  bnn_1714990201.492832_152573.pth  bnn_1714991506.687764_79100.pth  bnn_1714992798.9344902_86075.pth  bnn_1714994113.782419_89660.pth  bnn_1714995478.5164108_56453.pth  bnn_1714996925.3242922_57988.pth  bnn_1714998359.714766_76724.pth  bnn_1714999777.876107_52769.pth  bnn_1715001227.776486_53315.pth  bnn_1715002661.5642161_50969.pth  bnn_1715004097.5616739_84200.pth  bnn_1715005493.6139789_49894.pth  bnn_1715006864.0018392_54015.pth  bnn_1715008221.796384_43199.pth  bnn_1715009578.42359_45794.pth  bnn_1715010933.282986_44634.pth  bnn_1715012280.838048_48605.pth  bnn_1715013625.6123369_45584.pth  bnn_1715014956.767067_60759.pth  bnn_1715016287.143973_44595.pth  bnn_1715017617.8787332_41654.pth  bnn_1715018947.080276_73586.pth  bnn_1715020282.467426_50242.pth  bnn_1715021620.6545222_36701.pth  (+47 more)
brn/python/models/: beanreadings_neural_network_large.onnx  beanreadings_neural_network_small.onnx  beanreadings_neural_network_small.pth  info.md
brn/src/: beanreadings.rs  main.rs
(+7 files in other folders)
