[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errorfunctions = "0.2.0"
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.4"
features = ["Document", "Element", "HtmlElement", "Node", "Window", "console"]

[lib]
crate-type = ["cdylib"]

