[package]
name = "brn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errorfunctions = "0.2.0"
kdam = "0.5.1"
rand = "0.8.5"

[package.metadata.rustc-env]
CARGO_TARGET_TRIPLE = "aarch64-apple-darwin"
